<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SimpleFragment" >

    <TextView
        android:id="@+id/fragmentTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <TextView
        android:id="@+id/TvChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choice" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/winter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/winter" />

        <RadioButton
            android:id="@+id/spring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spring" />

        <RadioButton
            android:id="@+id/summer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summer" />

        <RadioButton
            android:id="@+id/autumn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autumn" />
    </RadioGroup>
</LinearLayout>